LPS-50042 - Content is no longer cut off

--- a/portal-web/docroot/html/css/portal/add_content.css
+++ b/portal-web/docroot/html/css/portal/add_content.css
@@ -37,7 +37,7 @@
 			}
 
 			.input-select-wrapper {
-				padding-left: 15px;
+				padding-left: 10px;
 				width: 25%;
 			}
 
